--- a/manifest.json
+++ b/manifest.json
@@ -22,4 +22,12 @@
         "type": "image/png",
         "purpose": "any"
     }
-]}
+],
+"shortcuts": [
+    {
+        "name":"The name you would like to be displayed for your shortcut",
+        "url":"The url you would like to open when the user chooses this shortcut. This must be a URL local to your PWA. For example: If my start_url is /, this URL must be something like /shortcut",
+        "description":"A description of the functionality of this shortcut"
+    }
+]
+}
