--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,45 @@
 {
-"name": "Faster Than Green",
-"short_name": "Faster Than Green",
-"start_url": "https://tapGame.jaiki.rocks",
-"display": "fullscreen",
-"description": "Tap the green square to increase you score. Don't tap the red square they will decrease it. You have 20 seconds to get the highest score possible.",
-"lang": "English",
-"dir": "auto",
-"theme_color": "#40ae87",
-"background_color": "#f0f0f0",
-"orientation": "any",
-"icons": [
+  "name": "Faster then green",
+  "icons": [
     {
-        "src": "assets/favicon/button-finger.png",
-        "sizes": "512x512",
-        "type": "image/png",
-        "purpose": "maskable"
+      "src": "/android-icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/png",
+      "density": "0.75"
     },
     {
-        "src": "assets/favicon/android-icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png",
-        "purpose": "any"
-    }
-],
-"shortcuts": [
+      "src": "/android-icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": "1.0"
+    },
     {
-        "name":"The name you would like to be displayed for your shortcut",
-        "url":"The url you would like to open when the user chooses this shortcut. This must be a URL local to your PWA. For example: If my start_url is /, this URL must be something like /shortcut",
-        "description":"A description of the functionality of this shortcut"
+      "src": "/android-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "density": "1.5"
+    },
+    {
+      "src": "/android-icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "density": "2.0"
+    },
+    {
+      "src": "/android-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": "3.0"
+    },
+    {
+      "src": "/android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": "4.0"
     }
-]
+  ],
+  "theme_color": "#f0f0f0",
+  "background_color": "#40ae87",
+  "short_name": "Faster then green",
+  "description": "Tap the green square to increase you score. Don't tap the red square they will decrease it. You have 20 seconds to get the highest score possible."
 }
