--- a/manifest.json
+++ b/manifest.json
@@ -41,6 +41,12 @@
       "sizes": "192x192",
       "type": "image\/png",
       "density": "4.0"
+    },
+    {
+      "src": "\/button-finger.png",
+      "sizes": "512x512",
+      "type": "image\/png",
+      "density": "4.0"
     }
   ],
   "theme_color": "#f0f0f0",
